# tsdist

./: .gitignore  LICENSE  Makefile  README.md  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: tsdist.yaml
src/tsdist/: TSDistances.py  distances.pxd  distances.pyx  parallel_distances.pxd  parallel_distances.pyx
test/: test_cy.py  test_simple.py  tsdist_test.pyx
tsdist/: TSDistances.py  tsdist.pyx
