[metadata]
name = tsdist
version = 0.1.0
description = A port of the R package TSdist to python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Bijan Kianoush Felix Riesenberg
author_email = bijan.riesenberg@protonmail.com
url = https://github.com/Data-Hero/tsdist
download_urls = https://pypi.org/project/tsdist
project_urls =
	Documentation = https://github.com/Data-Hero/tsdist
	Code = https://github.com/Data-Hero/tsdist
	Issue tracker = https://github.com/Data-Hero/tsdist/issues
classifiers =
	License :: OSI Approved :: MIT License
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.4
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h